Version 3.0.0
=============
  Add basic creation support for VDO target.
  Never send any discard ioctl with test mode.
  Fix thin-pool alloc which needs same PV for data and metadata.
  Extend list of non-memlocked areas with newly linked libs.
  Enhance vgcfgrestore to check for active LVs in restored VG.
  Configure supports --disable-silent-rules for verbose builds.
  Fix unmonitoring of merging snapshots.
  Cache can uses metadata format 2 with cleaner policy.
  Fix check if resized PV can also fit metadata area.
  Avoid showing internal error in lvs output or pvmoved LVs.
  Remove clvmd
  Remove lvmlib (api)
  lvconvert: provide possible layouts between linear and striped/raid
  Use versionsort to fix archive file expiry beyond 100000 files.

Version 2.02.178-rc1 - 24th May 2018
====================================
  Add libaio dependency for build.
  Remove lvm1 and pool format handling and add filter to ignore them.
  Move some filter checks to after disks are read.
  Rework disk scanning and when it is used.
  Add new io layer and shift code to using it.
  Fix lvconvert's return code on degraded -m raid1 conversion.
  --enable-testing switch for ./configure has been removed.
  --with-snapshots switch for ./configure has been removed.
  --with-mirrors switch for ./configure has been removed.
  --with-raid switch for ./configure has been removed.
  --with-thin switch for ./configure has been removed.
  --with-cache switch for ./configure has been removed.
  Include new unit-test framework and unit tests.
  Extend validation of region_size for mirror segment.
  Reload whole device stack when reinitilizing mirror log.
  Mirrors without monitoring are WARNING and not blocking on error.
  Detect too big region_size with clustered mirrors.
  Fix evaluation of maximal region size for mirror log.
  Enhance mirror log size estimation and use smaller size when possible.
  Fix incorrect mirror log size calculation on 32bit arch.
  Enhance preloading tree creating.